# fsh

./: README.md  build_and_upload.sh
contract/: .gitignore  Cargo.toml  Makefile  README.md
contract/src/: contract.rs  msg.rs  state.rs
frontend/: .env.example  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  FishTamagotchiUI.tsx  main.tsx  vite-env.d.ts
frontend/src/components/: Fish.tsx  FishTamagotchiUI.tsx  FishTank.tsx
frontend/src/contexts/: fishes.tsx
frontend/src/secretjs/: SecretJsContext.tsx  SecretJsError.ts  SecretJsFunctions.ts
frontend/src/utils/: ErrorPopup.tsx  sleep.ts
uploader/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
uploader/src/: instantiate_and_test.ts  instantiate_only.ts  upload.ts
